Name a taking by what it was given beside the value it is taken of
A number taken of one place was named by the operation and the place, which
holds only while such an operation is applied to one value and nothing else. A
quotient is not: the divisor says which number of the place it is, so the
quotient by two and the quotient by three are two numbers, and named without it
a line drawn on either falls on both.

So what names a taking carries the constants the call handed over beside that
value, and a call written with the operator the language spells an operation's
arithmetic as is read as the taking it is. The account for such a call comes off
the representation the operation already declares rather than being declared
beside it, so one operation's number is still read by one representation.

A truncating quotient is not composed into an affine form and this does not
compose one. It is a number taken of the place, the way an hour is a number of a
time: a rule over it is a rule over two numbers and the arithmetic between them
stays affine. What a search writes for a wanted quotient is that number times
the divisor, which reads back as the number asked for and is held to what the
position's own order carries.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>